[package]
name = "passmenu"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksey Astafiev <aastafiev@gmail.com>"]
license = "GPL-3"
description = "Passmenu program using rofi on Rust language"
homepage = "https://github.com/aastafiev/passmenu.git"
repository = "https://github.com/aastafiev/passmenu.git"
keywords = ["passmenu", "rofi"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expanduser = "1.2.2"
glob = "0.3.1"
